<resources>
    <string name="app_name">retoAmericar</string>
    <string name="title_activity_localizacion_mapa">localizacion_mapa</string>
    <string name="google_maps_key">AIzaSyDo_CGNYpl5bIuFhFGNWqzIekPIWP99upk</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="dialogo_linea1">Edificio, Zuatzu Kalea, 9, 20018 Donostia, Gipuzkoa</string>
    <string name="dialogo_linea3">Direccion : </string>
    <string name="dialogo_linea2">Lucas, Ramon, Ander, Maialen</string>
    <string name="dialogo_linea4">Creadores : </string>
    <string name="btnCrear">Crear</string>
    <string name="Apellido1">Primer Apellido</string>
    <string name="Apellido2">Segundo Apellido</string>
    <string name="Nombre">Nombre</string>
    <string name="Direccion">Direccion</string>
    <string name="Poblacion">Poblacion</string>
    <string name="Provincia">Provincia</string>
    <string name="Formpago">Forma de Pago</string>
    <string name="Telefono">Telefono</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnNuevo">Nuevo</string>
    <string name="btnFinalizar">Finalizar</string>
    <string name="btnBorrar">Borrar</string>
    <string name="agenda">CALENDARIO DE CITAS</string>
    <string name="partner">GESTIÓN DE PARTNERS</string>
    <string name="mandar">ENVIO A DELEGACIONES</string>
    <string name="pedidos">GESTIÓN DE PEDIDOS</string>
    <string name="Hora">Hora</string>
    <string name="cif">CIF</string>
    <string name="email">E-mail</string>
    <string name="contrasena">Contraseña</string>
    <string name="login">Log-in</string>
    <string name="usuario">Usuario</string>
    <string name="partners">Partners</string>
    <string name="eliminar">Eliminar</string>
    <string name="prcost">Precio coste:</string>
    <string name="prvent">Precio venta:</string>
    <string name="existencias">Existencias</string>
    <string name="cantidad">Cantidad</string>
    <string name="anadir">Añadir</string>
    <string name="modificar">Modificar</string>
    <string name="importar">IMPORTAR ARCHIVOS</string>
    <string name="exportar">EXPORTAR ARCHIVOS</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha">Fecha</string>
    <string name="partner2">Partner</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="seleccionar">Seleccionar</string>

</resources>