<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txvPartnerNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:text="@string/Nombre"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvPartnerApellido1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:paddingRight="4dp"
            android:text="@string/Apellido1" />

        <TextView
            android:id="@+id/txvPartnerApellido2"
            android:layout_width="264dp"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:text="@string/Apellido2" />
    </LinearLayout>

    <TextView
        android:id="@+id/txvPartnerDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="25dp"
        android:text="@string/Direccion" />

    <TextView
        android:id="@+id/txvPartnerPoblacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="25dp"
        android:text="@string/Poblacion" />

    <TextView
        android:id="@+id/txvPartnerTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Telefono" />
</LinearLayout>