<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start|center_horizontal"
    android:orientation="vertical"
    tools:context=".NuevaTareaActivity">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a"
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fechaa"
            android:layout_width="351dp"
            android:layout_height="67dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/horaa"
            android:layout_width="210dp"
            android:layout_height="67dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Hora"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/escojeHora"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seleccionar"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="21dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a77"
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/descripcionn"
            android:layout_width="381dp"
            android:layout_height="67dp"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="388dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/partner2" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/crearTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modificar" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancelarTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />
    </LinearLayout>

</LinearLayout>