<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvAgendaNombrePartner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:hint="idAgenda"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txvAgendaDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/descripcion"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvAgendaFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/fecha"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txvAgendaHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Hora"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>