<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevaLineaActivity">

    <ListView
        android:id="@+id/lsvNuevasLineas"
        android:layout_width="match_parent"
        android:layout_height="456dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnNuevaLineasFinalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFinalizar"
            app:layout_constraintBottom_toBottomOf="@+id/btnNuevaLineasCrear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnNuevaLineasCrear"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnNuvasLineasBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBorrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnNuevaLineasCrear"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="@+id/btnNuevaLineasCrear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.409" />

        <Button
            android:id="@+id/btnNuevaLineasCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNuevo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07" />

        <EditText
            android:id="@+id/edtNuevasLineasBorrar"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/btnNuvasLineasBorrar"
            app:layout_constraintEnd_toEndOf="@+id/btnNuevaLineasFinalizar"
            app:layout_constraintStart_toStartOf="@+id/btnNuevaLineasFinalizar"
            app:layout_constraintTop_toTopOf="@+id/btnNuvasLineasBorrar"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnNuevasLineasCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnNuvasLineasBorrar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnNuvasLineasBorrar"
            app:layout_constraintTop_toBottomOf="@+id/btnNuvasLineasBorrar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>